@@ -13,3 +13,20 @@ class IAuthenticatorView(Interface):
         """
         Verify if the request contains a valid authenticator.
         """
+
+
+class IDisableCSRFProtection(Interface):
+    """Be able to disable on a per-request basis.
+
+    In this version of plone.protect it does nothing.
+
+    Forward port from plone.protect 3, so you do not need code like this
+    when you want to disable csrf protection:
+
+        try:
+            from plone.protect.interfaces import IDisableCSRFProtection
+        except ImportError:
+            IDisableCSRFProtection = None
+        if IDisableCSRFProtection is not None:
+            alsoProvides(request, IDisableCSRFProtection)
+    """
